--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
     "recharts": "^2.12.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "sharp": "^0.33.2",
-    "vite": "^5.1.0",
-    "vite-plugin-compression2": "^0.18.0"
+    "vite": "^5.1.0"
   }
 }
