--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
     "sharp": "^0.33.2",
-    "vite": "^5.1.0",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.0"
   }
 }
